# python-monorepo

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
my_lib/: pyproject.toml
my_lib/tests/my_lib/: test_calc.py
sample1/: pyproject.toml
sample2/: pyproject.toml
