[project]
name = "python-monorepo"
version = "0.1.0"
description = ""
authors = [{ name = "dtorannpu", email = "dtorannpu@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "sample1",
    "sample2",
    "my-lib",
]

[dependency-groups]
test = ["pytest>=8.3.3,<9"]
dev = [
    "ruff>=0.7.2,<0.8",
    "mypy>=1.13.0,<2",
]

[tool.uv]
package = false
default-groups = [
    "test",
    "dev",
]

[tool.uv.sources]
sample1 = { path = "sample1" }
sample2 = { path = "sample2" }
my-lib = { path = "my_lib" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "-q",
    "--import-mode=importlib",
]
testpaths = ["tests"]

[tool.mypy]
explicit_package_bases = true
