[project]
name = "python-monorepo"
version = "0.1.0"
description = ""
authors = [{ name = "dtorannpu", email = "dtorannpu@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "sample1",
    "sample2",
    "my-lib",
]

[dependency-groups]
test = [
    "pytest>=8.4.1",
]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.9",
]

[tool.uv]
package = false
default-groups = [
    "test",
    "dev",
]

[tool.uv.sources]
sample1 = { workspace = true }
sample2 = { workspace = true }
my_lib = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "-q",
    "--import-mode=importlib",
]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["lint", "type", "3.13"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = ["test"]
commands = [["pytest"]]

[tool.tox.env.lint]
runner = "uv-venv-lock-runner"
with_dev = true
dependency_groups = ["dev"]
commands = [["ruff", "format", "--check"], ["ruff", "check", "."]]

[tool.tox.env.type]
runner = "uv-venv-lock-runner"
with_dev = true
dependency_groups = ["dev"]
commands = [["mypy", "."]]
