[project]
name = "python-monorepo"
version = "0.1.0"
description = ""
authors = [{ name = "dtorannpu", email = "dtorannpu@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
]

[dependency-groups]
test = [
    "pytest==9.0.2",
]
type = [
    { include-group = "test" },
    "mypy==1.19.1",
]
lint = [
    "ruff==0.14.11",
]
dev = [
    { include-group = "type" },
    { include-group = "lint" },
]

[tool.uv]
package = false
default-groups = [
    "dev",
]

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "packages/my_lib/src",
    "packages/sample1/src",
    "packages/sample2/src",
]
minversion = "6.0"
addopts = [
    "-ra",
    "-q",
    "--import-mode=importlib",
]

[tool.mypy]
mypy_path = [
    "packages/my_lib/src",
    "packages/sample1/src",
    "packages/sample2/src",
]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["lint", "type", "3.14"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = ["test"]
commands = [["pytest"]]

[tool.tox.env.lint]
runner = "uv-venv-lock-runner"
dependency_groups = ["lint"]
commands = [["ruff", "format", "--check"], ["ruff", "check", "."]]

[tool.tox.env.type]
runner = "uv-venv-lock-runner"
dependency_groups = ["type"]
commands = [["mypy", "."]]
