[tool.poetry]
name = "sample1"
version = "0.1.0"
description = ""
authors = ["dtorannpu <dtorannpu@gmail.com>"]
readme = "README.md"
packages = [{ include = "sample1", from = "src" }]


[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
