[tool.poetry]
name = "sample2"
version = "0.1.0"
description = ""
authors = ["dtorannpu <dtorannpu@gmail.com>"]
readme = "README.md"
packages = [{ include = "sample2", from = "src" }]


[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
